--- a/.github/workflows/ec2_endpoint.yml
+++ b/.github/workflows/ec2_endpoint.yml
@@ -30,6 +30,4 @@ jobs:
     
       - name: Ssh proxy command
         run: |
-			    ssh ubuntu@i-0560fb61b4ed18c3a \
-            -i ${{ secrets.KEY }} \
-            -o ProxyCommand='aws ec2-instance-connect open-tunnel --instance-id i-0560fb61b4ed18c3a'
+          echo "ola"
