--- a/.github/workflows/ec2_endpoint.yml
+++ b/.github/workflows/ec2_endpoint.yml
@@ -30,8 +30,7 @@ jobs:
     
       - name: Ssh proxy command
         run: |
-          chmod 400 ./endpoint.pem 
-          ssh ubuntu@i-0560fb61b4ed18c3a -o StrictHostKeyChecking=no  -i ./endpoint.pem -o ProxyCommand='aws ec2-instance-connect open-tunnel --instance-id i-0560fb61b4ed18c3a' '
+          ssh ubuntu@i-0560fb61b4ed18c3a -o StrictHostKeyChecking=no -i <(echo "${{ secrets.KEY }}")  -o ProxyCommand='aws ec2-instance-connect open-tunnel --instance-id i-0560fb61b4ed18c3a' '
 
               ls -a
           '
