--- a/.github/workflows/ec2_endpoint.yml
+++ b/.github/workflows/ec2_endpoint.yml
@@ -30,6 +30,9 @@ jobs:
     
       - name: Ssh proxy command
         run: |
+          which ssh-agent || ( apk --update add git openssh-client )
+          mkdir -p ~/.ssh
+          chmod 700 ~/.ssh
           echo "${{ secrets.KEY }}" | ssh-add -
           ssh ubuntu@i-0560fb61b4ed18c3a -o StrictHostKeyChecking=no -o ProxyCommand='aws ec2-instance-connect open-tunnel --instance-id i-0560fb61b4ed18c3a' '
 
