--- a/.github/workflows/ec2_endpoint.yml
+++ b/.github/workflows/ec2_endpoint.yml
@@ -30,6 +30,9 @@ jobs:
     
       - name: Ssh proxy command
         run: |
+          mkdir -p ~/.ssh
+          chmod 700 ~/.ssh
+          ssh-keyscan -H "172.31.111.208" >> ~/.ssh/known_hosts
           aws ec2-instance-connect ssh  \
             --instance-id i-0560fb61b4ed18c3a \
             --instance-ip 172.31.111.208 \
