--- a/.github/workflows/ec2_endpoint.yml
+++ b/.github/workflows/ec2_endpoint.yml
@@ -30,4 +30,10 @@ jobs:
     
       - name: Ssh proxy command
         run: |
+          mkdir -p ~/.ssh
+          chmod 700 ~/.ssh
+          ssh-keyscan -H "172.31.111.208" >> ~/.ssh/known_hosts
+          
+      - name: Run sh
+        run: |
           ./deploy.sh
