add commands and variables

--- a/.github/workflows/ec2_endpoint.yml
+++ b/.github/workflows/ec2_endpoint.yml
@@ -31,4 +31,4 @@ jobs:
       - name: Run sh NMOVO
         id: novo
         run: |
-          ./deploy.sh
+          sh deploy.sh -d  i-0973c4c7d024bd386 -v 1.27.3 -n balanco-app -u 172.31.124.225
