--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,4 +10,6 @@ jobs:
     
     steps:
     - name: Build
-      run: echo "tag ${{ github.ref_name }}"
+      run: |
+        ls -a
+        echo "tag ${{ github.ref_name }}"
