--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,8 +8,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
     
+    permissions:
+      id-token: write
+      contents: read
+
     steps:
-    - name: Build
-      run: |
-        ls -a
-        echo "tag ${{ github.ref_name }}"
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 10
+
+      - name: Build
+        run: |
+          ls -a
+          echo "tag ${{ github.ref_name }}"
