--- a/.github/workflows/action-semantic-pull-request.yml
+++ b/.github/workflows/action-semantic-pull-request.yml
@@ -22,4 +22,6 @@ jobs:
           types: |
             [
           scopes: |
-            JIRA-\d+]
+            ENG-\d+]
+            IFS-\d+]
+          headerPattern: ^(\[)((ENG|IFS)-\d+\]) (.+)$
