--- a/.github/workflows/action-semantic-pull-request.yml
+++ b/.github/workflows/action-semantic-pull-request.yml
@@ -25,3 +25,5 @@ jobs:
             ENG-\d+]
             IFS-\d+]
           headerPattern: ^(\[)((ENG|IFS)-\d+\]) (.+)$
+          requireScope: true
+          subjectPattern: ^.*$
