--- a/.github/workflows/action-semantic-pull-request.yml
+++ b/.github/workflows/action-semantic-pull-request.yml
@@ -16,6 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: amannn/action-semantic-pull-request@v5
+        id: lint_pr_title
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -26,4 +27,5 @@ jobs:
             IFS-\d+]
           headerPattern: ^(\[)((ENG|IFS)-\d+\]) (.+)$
           requireScope: true
+          headerPatternCorrespondence: type, scope, subject
           subjectPattern: ^.*$
