--- a/.github/workflows/action-semantic-pull-request.yml
+++ b/.github/workflows/action-semantic-pull-request.yml
@@ -25,7 +25,7 @@ jobs:
           scopes: |
             ENG-\d+]
             IFS-\d+]
-          headerPattern: ^(\[)((ENG|IFS)-\d+\]) (.+)$
+          headerPattern: ^(\W*)((ENG|IFS)-\d+\]) (.*)$
           requireScope: true
           headerPatternCorrespondence: type, scope, subject
           subjectPattern: ^.*$
