--- a/.github/workflows/action-semantic-pull-request.yml
+++ b/.github/workflows/action-semantic-pull-request.yml
@@ -15,14 +15,6 @@ jobs:
     name: Validate PR title
     runs-on: ubuntu-latest
     steps:
-      - uses: amannn/action-semantic-pull-request@v5
-        id: lint_pr_title
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: Slashgear/action-check-pr-title@v4.3.0
         with:
-          types: |
-            IFS
-            ENG
-          scopes: |
-            \d+
-          requireScope: true
+          regexp: "^(\W*)((ENG|IFS)-\d+\]) (.*)$"
