--- a/.github/workflows/action-semantic-pull-request.yml
+++ b/.github/workflows/action-semantic-pull-request.yml
@@ -1,11 +1,8 @@
-name: "Lint PR"
+name: "Lint Pull Request"
 
 on:
-  pull_request_target:
-    types:
-      - opened
-      - edited
-      - synchronize
+  pull_request:
+    types: [opened, synchronize, reopened]
 
 permissions:
   pull-requests: read
