--- a/.github/workflows/action-semantic-pull-request.yml
+++ b/.github/workflows/action-semantic-pull-request.yml
@@ -2,13 +2,10 @@ name: "Lint Pull Request"
 
 on:
   pull_request:
-    branches: [main]
-
-permissions:
-  pull-requests: read
+    types: [opened, synchronize, reopened]
 
 jobs:
-  main:
+  check:
     name: Validate PR title
     runs-on: ubuntu-latest
     steps:
