Try new one (#26)
* add pr validation

* chnage patters

* change pattern

* fix regex

* fix regex

* change subject

* add correspondence

* add new regex

* adds a custom type

* add regex

* add a new try

* üse a nothe library

* add new validation

* fix trigger

* add a new line

* change

* revert changes

--- a/.github/workflows/action-semantic-pull-request.yml
+++ b/.github/workflows/action-semantic-pull-request.yml
@@ -4,11 +4,8 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
 
-permissions:
-  pull-requests: read
-
 jobs:
-  main:
+  check:
     name: Validate PR title
     runs-on: ubuntu-latest
     steps:
