--- a/.github/workflows/action-semantic-pull-request.yml
+++ b/.github/workflows/action-semantic-pull-request.yml
@@ -1,14 +1,18 @@
-name: "Lint Pull Request"
+name: Check build
 
 on:
   pull_request:
     types: [opened, synchronize, reopened]
 
 jobs:
-  check:
-    name: Validate PR title
+  build-validation:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+
     steps:
-      - uses: Slashgear/action-check-pr-title@v4.3.0
+      - name: Checkout Repository
+        uses: actions/checkout@v4
         with:
-          regexp: "^(\W*)((ENG|IFS)-\d+\]) (.*)$"
+          fetch-depth: 10
