--- a/.github/workflows/action-semantic-pull-request.yml
+++ b/.github/workflows/action-semantic-pull-request.yml
@@ -16,3 +16,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 10
+
+      - uses: Slashgear/action-check-pr-title@v4.3.0
+        name: Check Itera PR name Conventions
+        with:
+          regexp: "^(\W*)((ENG|IFS)-\d+\]) (.*)$"
