add a new event

--- a/.github/workflows/action-semantic-pull-request.yml
+++ b/.github/workflows/action-semantic-pull-request.yml
@@ -2,7 +2,7 @@ name: Pull request Conventions
 
 on:
   pull_request:
-    types: [opened, synchronize, reopened]
+    types: [opened, synchronize, reopened, edited]
 
 jobs:
   pr-title-checker:
