--- a/.github/workflows/branch-deploy.yml
+++ b/.github/workflows/branch-deploy.yml
@@ -17,17 +17,22 @@ jobs:
     if: ${{ github.event.issue.pull_request }}
     runs-on: ubuntu-latest
     steps:
-
       - name: branch-deploy
         id: branch-deploy
         uses: github/branch-deploy@v9.1.3
+         with:
+          trigger: ".deploy"
+          environment: "development"
+          stable_branch: "main"
 
       - name: Checkout
         if: steps.branch-deploy.outputs.continue == 'true'
         uses: actions/checkout@v4
         with:
           ref: ${{ steps.branch-deploy.outputs.ref }}
+          
       - name: deploy
         if: ${{ steps.branch-deploy.outputs.continue == 'true' && steps.branch-deploy.outputs.noop != 'true' }}
         run: |
           echo "DEPLOY ON DEVELOPMENT"
+          ls -a
