--- a/.github/workflows/branch-deploy.yml
+++ b/.github/workflows/branch-deploy.yml
@@ -16,6 +16,12 @@ jobs:
     name: deploy
     if: ${{ github.event.issue.pull_request }}
     runs-on: ubuntu-latest
+
+    permissions:
+      id-token: write
+      contents: read
+
+
     steps:
       - name: branch-deploy
         id: branch-deploy
