disable naked commands

--- a/.github/workflows/branch_deployment.yml
+++ b/.github/workflows/branch_deployment.yml
@@ -24,6 +24,8 @@ jobs:
         with:
           trigger: ".deploy"
           environment: "development"
+          environment_targets: "production,development,staging"
+          disable_naked_commands: "true"
           stable_branch: "main"
 
       - name: Checkout
