--- a/.github/workflows/branch_deployment.yml
+++ b/.github/workflows/branch_deployment.yml
@@ -37,5 +37,5 @@ jobs:
       - name: deploy
         if: ${{ steps.branch-deploy.outputs.continue == 'true' && steps.branch-deploy.outputs.noop != 'true' }}
         run: |
-          echo "DEPLOY ON ${{ fromJson('{ "development": "CONTA A", "staging": "CONTA B" }')[${{ steps.branch-deploy.outputs.environment }}] }} "
-          ls -a
+          env_var=$(echo ${{ fromJson('{"development": "CONTA A", "staging": "CONTA B"}')["${{ steps.branch-deploy.outputs.environment }}"] }})
+          echo "DEPLOY ON $env_var"
