--- a/.github/workflows/branch_deployment.yml
+++ b/.github/workflows/branch_deployment.yml
@@ -37,5 +37,5 @@ jobs:
       - name: deploy
         if: ${{ steps.branch-deploy.outputs.continue == 'true' && steps.branch-deploy.outputs.noop != 'true' }}
         run: |
-          echo ${{ fromJson('{ "development": "CONTA A", "staging": "CONTA B" }')["development"]}}
+          echo ${{ fromJson('{ 1: "CONTA A", 2: "CONTA B" }')[1]}}
           ls -a
