--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -1,9 +1,9 @@
 name: Staging Deploy
 
 on:
-  push:
-    tags:
-      - "v[0-9]+.[0-9]+.[0-9]"
+  release:
+    types: [published]
+
 
 jobs: 
   build:
