--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -2,7 +2,7 @@ name: Developmente Deploy
 
 on:
   push:
-    branches: main
+    branches: semantic-version
 
 jobs: 
   build:
@@ -22,3 +22,18 @@ jobs:
         id: novo
         run: |
          echo "DEPLOY DEVELOPMENT"
+
+      - name: Bump version and push tag
+        id: semantic
+        uses: mathieudutour/github-tag-action@v6.1
+        with:
+          github_token: ${{ secrets.TOKEN }}
+
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
+        with:
+          token: ${{ secrets.TOKEN }}
+          tag_name: ${{ steps.semantic.outputs.new_tag }}
+          draft: false
+          prerelease: true
+          generate_release_notes: true
