--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -15,8 +15,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: DEPLOY
         id: novo
@@ -25,9 +23,10 @@ jobs:
 
       - name: Bump version and push tag
         id: semantic
-        uses: mathieudutour/github-tag-action@v6.1
+        uses: mathieudutour/github-tag-action@v6.2
         with:
           github_token: ${{ secrets.TOKEN }}
+          append_to_pre_release_tag: ""
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
