--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -26,7 +26,7 @@ jobs:
         uses: mathieudutour/github-tag-action@v6.1
         with:
           github_token: ${{ secrets.TOKEN }}
-          default_prerelease_bump: "prepatch"
+          append_to_pre_release_tag: "rc"
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
