--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -26,8 +26,7 @@ jobs:
         uses: mathieudutour/github-tag-action@v6.1
         with:
           github_token: ${{ secrets.TOKEN }}
-          default_bump: "patch"
-          default_prerelease_bump: "prepatch"
+          release_branches: .*
 
 
       - name: Create Release
