--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -34,12 +34,12 @@ jobs:
         with:
           token: ${{ secrets.TOKEN }}
           tag_name: ${{ steps.semantic.outputs.new_tag }}
-          draft: true
+          draft: false
           prerelease: false
           generate_release_notes: true
           body: |
             ## Info
-            Commit ${{ github.sha }} was deployed to `staging`. [See code diff](${{ github.event.compare }}).
+            Commit ${{ github.sha }} was deployed to `development`. [See code diff](${{ github.event.compare }}).
 
             It was initialized by [${{ github.event.sender.login }}](${{ github.event.sender.html_url }}).
 
