--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -34,7 +34,7 @@ jobs:
         with:
           token: ${{ secrets.TOKEN }}
           tag_name: ${{ steps.semantic.outputs.new_tag }}
-          draft: false
+          draft: true
           prerelease: true
           generate_release_notes: true
           body: |
