--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -34,7 +34,7 @@ jobs:
         with:
           token: ${{ secrets.TOKEN }}
           tag_name: draft-${{ steps.semantic.outputs.new_tag }}
-          draft: true
+          draft: false
           prerelease: false
           make_latest: false
           generate_release_notes: true
