--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -34,7 +34,7 @@ jobs:
           token: ${{ secrets.TOKEN }}
           tag_name: ${{ steps.semantic.outputs.new_tag }}
           draft: true
-          prerelease: false
+          prerelease: true
           make_latest: false
           generate_release_notes: true
           body: |
