--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -3,7 +3,7 @@ name: Release Drafter
 on:
   push:
     branches:
-      - main
+      - master
 
 permissions:
   contents: read
@@ -26,7 +26,5 @@ jobs:
       # Drafts your next Release notes as Pull Requests are merged into "master"
       - uses: release-drafter/release-drafter@v6
         # (Optional) specify config name to use, relative to .github/. Default: release-drafter.yml
-        with:
-          commitish: main
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
