--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -34,8 +34,8 @@ jobs:
           token: ${{ secrets.TOKEN }}
           tag_name: ${{ steps.semantic.outputs.new_tag }}
           draft: true
-          prerelease: true
-          make_latest: false
+          prerelease: false
+          make_latest: true
           generate_release_notes: true
           body: |
             ## Info
