--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -34,5 +34,6 @@ jobs:
         # (Optional) specify config name to use, relative to .github/. Default: release-drafter.yml
         with:
           tag: ${{ steps.semantic.outputs.new_tag }}
+          prerelease-identifier: 'alpha' 
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
