--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -28,12 +28,11 @@ jobs:
         uses: mathieudutour/github-tag-action@v6.1
         with:
           github_token: ${{ secrets.TOKEN }}
-          release_branches: .*
+          # release_branches: .*
 
       - uses: release-drafter/release-drafter@v6
         # (Optional) specify config name to use, relative to .github/. Default: release-drafter.yml
         with:
           tag: ${{ steps.semantic.outputs.new_tag }}
-          prerelease-identifier: 'alpha' 
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
