--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -34,7 +34,7 @@ jobs:
       - uses: release-drafter/release-drafter@v6
         # (Optional) specify config name to use, relative to .github/. Default: release-drafter.yml
         with:
-          prerelease: true
+          #prerelease: true
           tag: ${{ steps.semantic.outputs.new_tag }}
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
