--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -28,7 +28,7 @@ jobs:
         uses: mathieudutour/github-tag-action@v6.1
         with:
           github_token: ${{ secrets.TOKEN }}
-          release_branches: .*
+          release_branches: release.*
           append_to_pre_release_tag: draft
 
       - uses: release-drafter/release-drafter@v6
