--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           github_token: ${{ secrets.TOKEN }}
           release_branches: release.*
-          append_to_pre_release_tag: draft
+          append_to_pre_release_tag: rc
 
       - uses: release-drafter/release-drafter@v6
         # (Optional) specify config name to use, relative to .github/. Default: release-drafter.yml
