--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -23,15 +23,24 @@ jobs:
       #  run: |
       #    echo "GHE_HOST=${GITHUB_SERVER_URL##https:\/\/}" >> $GITHUB_ENV
 
+      # - name: Bump version and push tag
+      #   id: semantic
+      #   uses: mathieudutour/github-tag-action@v6.1
+      #   with:
+      #     github_token: ${{ secrets.TOKEN }}
+      #     default_bump: false
+      #     release_branches: release.*
+      #     custom_release_rules: "nao:patch"
+      #     append_to_pre_release_tag: rc
+
+
       - name: Bump version and push tag
         id: semantic
-        uses: mathieudutour/github-tag-action@v6.1
-        with:
-          github_token: ${{ secrets.TOKEN }}
-          default_bump: false
-          release_branches: release.*
-          custom_release_rules: "nao:patch"
-          append_to_pre_release_tag: rc
+        uses: anothrNick/github-tag-action@v1 # Don't use @master or @v1 unless you're happy to test the latest version
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }} # if you don't want to set write permissions use a PAT token
+          WITH_V: true
+          PRERELEASE: true
 
       - uses: release-drafter/release-drafter@v6
         # (Optional) specify config name to use, relative to .github/. Default: release-drafter.yml
