--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -13,31 +13,43 @@ jobs:
       contents: read
 
     steps:
+      # - uses: actions/checkout@v4
+      #   with:
+      #     ref: ${{ github.event.pull_request.merge_commit_sha }}
+      #     fetch-depth: '0'
+
+      # - name: Bump version and push tag
+      #   id: semantic
+      #   uses: anothrNick/github-tag-action@v1 # Don't use @master or @v1 unless you're happy to test the latest version
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.TOKEN }} # if you don't want to set write permissions use a PAT token
+      #     WITH_V: true
+      #     DEFAULT_BUMP: false
+      #     PRERELEASE: true
+      #     PRERELEASE_SUFFIX: rc
+      #     RELEASE_BRANCHES: release.*
+
+      # - uses: release-drafter/release-drafter@v6
+      #   # (Optional) specify config name to use, relative to .github/. Default: release-drafter.yml
+      #   with:
+      #     prerelease: true
+      #     tag: ${{ steps.semantic.outputs.new_tag }}
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.TOKEN }}
+
       - uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.pull_request.merge_commit_sha }}
-          fetch-depth: '0'
+          path: '.'
 
-      - name: Bump version and push tag
-        id: semantic
-        uses: anothrNick/github-tag-action@v1 # Don't use @master or @v1 unless you're happy to test the latest version
-        env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }} # if you don't want to set write permissions use a PAT token
-          WITH_V: true
-          DEFAULT_BUMP: false
-          PRERELEASE: true
-          PRERELEASE_SUFFIX: rc
-          RELEASE_BRANCHES: release.*
-          FORCE_WITHOUT_CHANGES_PRE: true
+      # You can make whatever type of change to the repo...
+      - run: echo "${{ github.ref_name }}" > ./VERSION
 
-
-      - uses: release-drafter/release-drafter@v6
-        # (Optional) specify config name to use, relative to .github/. Default: release-drafter.yml
+      # ...and then use the action as you would normally do, but providing the path to the repo
+      - uses: EndBug/add-and-commit@v9
         with:
-          prerelease: true
-          tag: ${{ steps.semantic.outputs.new_tag }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          message: 'Bump version...'
+          add: 'VERSION --force'
+          cwd: './'
 
       - name: DEPLOY
         id: novo
