--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -54,6 +54,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - run: echo "${{ github.ref_name }}" > ./VERSION
+      
       - uses: EndBug/add-and-commit@v9
         with:
           message: Bump version...
