--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -53,9 +53,11 @@ jobs:
 
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          ref: main
 
       - run: echo "${{ github.ref_name }}" > ./VERSION
-      
+
       - uses: EndBug/add-and-commit@v9
         with:
           message: Bump version...
