--- a/.github/workflows/bump_version.yml
+++ b/.github/workflows/bump_version.yml
@@ -3,7 +3,7 @@ name: Bump Version
 on:
   push:
     branches: main
-    paths-ignore:
+    paths:
       - VERSION
 
 jobs: 
@@ -18,6 +18,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
+          ref: ${{ github.event.pull_request.merge_commit_sha }}
           fetch-depth: '0'
 
       - name: Bump version and push tag
