--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -3,6 +3,9 @@ name: Developmente Deploy
 on:
   push:
     branches: main
+    paths-ignore:
+      - VERSION
+
 jobs: 
   build:
     runs-on: ubuntu-latest
