--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -59,9 +59,24 @@ jobs:
 
       - run: echo "${{ github.ref_name }}" > ./VERSION
 
-      - uses: EndBug/add-and-commit@v9
+      # - uses: EndBug/add-and-commit@v9
+      #   with:
+      #     message: Bump version...
+      
+
+      - name: Create Pull Request
+        id: cpr
+        uses: peter-evans/create-pull-request@v3
         with:
-          message: Bump version...
+          token: ${{ secrets.TOKEN }}
+
+      - name: Enable Pull Request Automerge
+        if: steps.cpr.outputs.pull-request-operation == 'created'
+        uses: peter-evans/enable-pull-request-automerge@v3
+        with:
+          token: ${{ secrets.TOKEN }}
+          pull-request-number: ${{ steps.cpr.outputs.pull-request-number }}
+          merge-method: merged
 
       - name: DEPLOY
         id: novo
