--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -69,6 +69,7 @@ jobs:
         uses: peter-evans/create-pull-request@v3
         with:
           token: ${{ secrets.TOKEN }}
+          title: [IFS-000] Bump version
 
       - name: Enable Pull Request Automerge
         if: steps.cpr.outputs.pull-request-operation == 'created'
@@ -76,7 +77,7 @@ jobs:
         with:
           token: ${{ secrets.TOKEN }}
           pull-request-number: ${{ steps.cpr.outputs.pull-request-number }}
-          merge-method: merged
+          merge-method: merge
 
       - name: DEPLOY
         id: novo
