--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -69,7 +69,7 @@ jobs:
         uses: peter-evans/create-pull-request@v3
         with:
           token: ${{ secrets.TOKEN }}
-          title: [IFS-000] Bump version
+          title: "[ENG-000] Bump version"
 
       - name: Enable Pull Request Automerge
         if: steps.cpr.outputs.pull-request-operation == 'created'
